--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,9 @@
   .pub_titulo{
     border-top: 1px solid black;
   }
+
+  .contenedor_tareas {
+    font-size: 20px;
+    margin-left: 50px;
+    margin-bottom: 70px;
+  }
